--- a/wally.toml
+++ b/wally.toml
@@ -10,6 +10,6 @@ version = "1.0.0"
 
 [dependencies]
 EnumList = "sleitnick/enum-list@2.0.0"
-Promise = "evaera/promise@3.2.1"
+Flipper = "reselim/flipper@2.0.0"
 Signal = "sleitnick/signal@1.1.0"
 t = "osyrisrblx/t@3.0.0"
